# libirmin

./: .gitignore  Cargo.toml  Makefile  README.md  compile_flags.txt  dune  dune-project  irmin.h  libirmin.opam  libirmin.opam.template  setup.py
.github/workflows/: build.yml  python.yml  rust.yml
examples/: json-merge.py  tezos.py  util.py
include/: irmin.h
lib/: bindings.ml  dune  libirmin.ml  types.ml
py/: setup.py  test.py
py/irmin/: __init__.py  irmin.py  irmin_ffi.py
rust/: Cargo.toml  build.rs
rust/examples/: json_merge.rs  tezos.rs
rust/src/: bindings.rs  commit.rs  config.rs  hash.rs  info.rs  irmin_string.rs  lib.rs  path.rs  repo.rs  store.rs  tree.rs  ty.rs  value.rs
schema/: dune  irmin_schema_gen.ml
src/: commit.ml  config.ml  dune  info.ml  libirmin_bindings.ml  repo.ml  schema.ml  store.ml  tree.ml  type.ml  types.ml  util.ml  value.ml
test/: test.c
